--- a/src/app/ourservices/ourservices.component.html
+++ b/src/app/ourservices/ourservices.component.html
@@ -18,3 +18,28 @@
     </div>
 
 </div>
+
+
+<!-- Mobile View -->
+
+
+<div fxHide.gt-md>
+  <h1>Our services</h1>
+  <br> <br>
+  <div fxLayout="column" fxLayoutGap="70px" fxLayoutAlign="center center" >
+
+    <mat-card class="matmob">
+      <mat-card-title style="text-align: center;">Job Consultancy</mat-card-title>
+
+    </mat-card>
+    <mat-card class="matmob">
+      <mat-card-title style="text-align: center; line-height: 30px;">Counselling in Career, Psychology , Corporate etc..</mat-card-title>
+
+    </mat-card>
+    <mat-card class="matmob">
+      <mat-card-title style="text-align: center;"> Digital Marketing</mat-card-title>
+
+    </mat-card>
+  </div>
+
+</div>
