--- a/src/app/ourservices/ourservices.component.scss
+++ b/src/app/ourservices/ourservices.component.scss
@@ -1,5 +1,5 @@
 h1{
-  font-size: 50px;
+  font-size: 45px;
   font-family: cursive;
   color: royalblue;
   padding-top: 35px;
@@ -7,4 +7,7 @@ h1{
 }
 .matdesk{
   width: 400px;
+}
+.matmob{
+  width: 300px;
 }
