--- a/src/app/ourservices/ourservices.component.html
+++ b/src/app/ourservices/ourservices.component.html
@@ -1,45 +1,87 @@
 <div fxHide.lt-md>
-    <h1>Our services</h1>
-    <br> <br>
-    <div fxLayout fxLayoutGap="90px" fxLayoutAlign="center" >
+  <h1>Our services</h1>
+  <br />
+  <br />
+  <div fxLayout fxLayoutGap="90px" fxLayoutAlign="center">
+    <mat-card class="matdesk">
+      <mat-card-title style="text-align: center;"
+        >Job Consultancy</mat-card-title
+      >
+      <br />
+      <br />
+      <br />
 
-      <mat-card class="matdesk">
-        <mat-card-title style="text-align: center;">Job Consultancy</mat-card-title>
+      <img
+        src="assets/Images/Services/Job Consultancy.jpg"
+        style="width: 400px; height: 270px;"
+      />
+      <mat-card-content>
+        We provide jon consultancy .
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="matdesk">
+      <mat-card-title style="text-align: center; line-height: 30px;"
+        >Counselling in Career, Psychology , Corporate etc..</mat-card-title
+      >
+      <br />
 
-      </mat-card>
-      <mat-card class="matdesk">
-        <mat-card-title style="text-align: center; line-height: 30px;">Counselling in Career, Psychology , Corporate etc..</mat-card-title>
+      <img
+        src="assets/Images/Services/Counselling.jpg"
+        style="width: 400px; height: 270px;"
+      />
+    </mat-card>
+    <mat-card class="matdesk">
+      <mat-card-title style="text-align: center;">
+        Social Media Handling</mat-card-title
+      >
+      <br />
+      <br />
+      <br />
 
-      </mat-card>
-      <mat-card class="matdesk">
-        <mat-card-title style="text-align: center;"> Digital Marketing</mat-card-title>
-
-      </mat-card>
-    </div>
-
+      <img
+        src="assets/Images/Services/Social Media Handling.jpg"
+        style="width: 400px; height: 270px;"
+      />
+    </mat-card>
+  </div>
 </div>
-
 
 <!-- Mobile View -->
 
-
 <div fxHide.gt-md>
   <h1>Our services</h1>
-  <br> <br>
-  <div fxLayout="column" fxLayoutGap="70px" fxLayoutAlign="center center" >
-
+  <br />
+  <br />
+  <div fxLayout="column" fxLayoutGap="70px" fxLayoutAlign="center center">
     <mat-card class="matmob">
-      <mat-card-title style="text-align: center;">Job Consultancy</mat-card-title>
-
+      <mat-card-title style="text-align: center;"
+        >Job Consultancy</mat-card-title
+      >
+      <img
+        src="assets/Images/Services/Job Consultancy.jpg"
+        style="width: 300px; height: 220px;"
+      />
+      <mat-card-content>
+        We provide jon consultancy .
+      </mat-card-content>
     </mat-card>
     <mat-card class="matmob">
-      <mat-card-title style="text-align: center; line-height: 30px;">Counselling in Career, Psychology , Corporate etc..</mat-card-title>
-
+      <mat-card-title style="text-align: center; line-height: 30px;"
+        >Counselling in Career, Psychology , Corporate etc..</mat-card-title
+      >
+      <img
+        src="assets/Images/Services/Counselling.jpg"
+        style="width: 300px; height: 220px;"
+      />
     </mat-card>
     <mat-card class="matmob">
-      <mat-card-title style="text-align: center;"> Digital Marketing</mat-card-title>
-
+      <mat-card-title style="text-align: center;">
+        Social Media Handling</mat-card-title
+      >
+      <img
+      src="assets/Images/Services/Social Media Handling.jpg"
+      style="width: 300px; height: 220px;"
+    />
     </mat-card>
   </div>
-
 </div>
