--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,27 +5,328 @@
       <p>Grow Hopes</p>
     </div>
   </div>
-  <br> <br>
+  <br />
+  <br />
   <div fxLayout fxLayoutGap="80px" fxLayoutAlign="center">
-    <section style="width: 600px;text-align: center;">
-      <img src="assets/Images/home/mission.jpg" style="width: 400x;height: 200px; border-radius: 50%;">
-      <h2>Our Mission</h2>
-      <p>
+    <section style="width: 500px; text-align: center;">
+      <img
+        src="assets/Images/home/mission.jpg"
+        style="width: 400x; height: 200px; border-radius: 50%;"
+      />
+      <h2 style="font-size: 26px;">Our Mission</h2>
+      <p style="font-size: 16px; font-family: 'Times New Roman', Times, serif;">
         We deliver what we promise, efficient and promising prospected
         candidates to our clients. We want to give each of you the time and
         guidance you deserve. To provide the best services with effective
         results, changing lives everyday - RIGHT MAN AT RIGHT JOB.
       </p>
     </section>
-    <section style="width: 600px; text-align: center;">
-      <img src="assets/Images/home/vision.jpg" style="width: 400x;height: 200px; border-radius: 50%;">
-      <h2>Our Vision</h2>
-      <p>
+    <section style="width: 500px; text-align: center;">
+      <img
+        src="assets/Images/home/vision.jpg"
+        style="width: 400x; height: 200px; border-radius: 50%;"
+      />
+      <h2 style="font-size: 26px;">Our Vision</h2>
+      <p style="font-size: 16px; font-family: 'Times New Roman', Times, serif;">
         To change the perception of recruitment and consultancy by devoting
         ourselves to the happiness of our clients, employees and candidates.
       </p>
     </section>
-  </div> <br>
+  </div>
+  <br />
+  <div class="bg1"></div>
+  <br />
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+    <div
+      style="
+        text-align: center;
+        font-size: 60px;
+        line-height: 50px;
+        font-family: cursive;
+      "
+    >
+      Meet Our Team
+    </div>
+    <div fxLayout fxLayoutGap="50px" fxLayoutAlign="center center">
+      <section>
+        <mat-card>
+          <mat-card-title>Shashank Verma</mat-card-title>
+          <mat-card-subtitle>Founder</mat-card-subtitle>
+          <img class="person" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto: growhopes0@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/shashank-verma-18b854185"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
 
-  <!-- <div class="bg1"></div> -->
+      <section>
+        <mat-card>
+          <mat-card-title>Sofia Dubey</mat-card-title>
+          <mat-card-subtitle>Marketing Head</mat-card-subtitle>
+          <img class="person" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto:  sofiadubey@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/sofiadubey"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+
+      <section>
+        <mat-card>
+          <mat-card-title>Nikita Kejriwal</mat-card-title>
+          <mat-card-subtitle>HR Head</mat-card-subtitle>
+          <img class="person" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto:  nikitak649@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/nikita-kejriwal-52118a179"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+    </div>
+    <div fxLayout fxLayoutGap="50px" fxLayoutAlign="center center">
+      <section>
+        <mat-card>
+          <mat-card-title>Shivansh Arora</mat-card-title>
+          <mat-card-subtitle>Strategic Consultant</mat-card-subtitle>
+          <img class="person" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto: simplyshivansh10@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href=" https://www.linkedin.com/in/shivansharora/"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+
+      <section>
+        <mat-card>
+          <mat-card-title>Tanya Dhingra</mat-card-title>
+          <mat-card-subtitle>Social Media Head</mat-card-subtitle>
+          <img class="person" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto:  taniyadhingra97@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/tanya-dhingra-b92300161"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+    </div>
+    <br /><br />
+  </div>
+  <!-- <app-ourservices></app-ourservices> -->
+</div>
+
+
+<div fxHide.gt-md>
+  <div class="mobcontainer">
+    <img class="mobimg" src="\assets\Images\home\logo.png" />
+    <div class="mobcenter">
+      <p style="font-size: 22px;">Grow Hopes</p>
+    </div>
+  </div>
+  <br />
+  <br />
+  <div fxLayout="column" fxLayoutGap="80px" fxLayoutAlign="center center">
+    <section style="width: 300px; text-align: center;">
+      <img
+        src="assets/Images/home/mission.jpg"
+        style="width: 400x; height: 200px; border-radius: 50%;"
+      />
+      <h2 style="font-size: 26px;">Our Mission</h2>
+      <p style="font-size: 16px; font-family: 'Times New Roman', Times, serif;">
+        We deliver what we promise, efficient and promising prospected
+        candidates to our clients. We want to give each of you the time and
+        guidance you deserve. To provide the best services with effective
+        results, changing lives everyday - RIGHT MAN AT RIGHT JOB.
+      </p>
+    </section>
+    <section style="width: 300px; text-align: center;">
+      <img
+        src="assets/Images/home/vision.jpg"
+        style="width: 400x; height: 200px; border-radius: 50%;"
+      />
+      <h2 style="font-size: 26px;">Our Vision</h2>
+      <p style="font-size: 16px; font-family: 'Times New Roman', Times, serif;">
+        To change the perception of recruitment and consultancy by devoting
+        ourselves to the happiness of our clients, employees and candidates.
+      </p>
+    </section>
+  </div>
+  <br />
+  <div class="bg1"></div>
+  <br />
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+    <div
+      style="
+        text-align: center;
+        font-size: 45px;
+        line-height: 35px;
+        font-family: cursive;
+      "
+    >
+      Meet Our Team
+    </div>
+    <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+      <section>
+        <mat-card class="matmob">
+          <mat-card-title>Shashank Verma</mat-card-title>
+          <mat-card-subtitle>Founder</mat-card-subtitle>
+          <img class="personmob" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto: growhopes0@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/shashank-verma-18b854185"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+
+      <section>
+        <mat-card class="matmob">
+          <mat-card-title>Sofia Dubey</mat-card-title>
+          <mat-card-subtitle>Marketing Head</mat-card-subtitle>
+          <img class="personmob" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto:  sofiadubey@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/sofiadubey"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+
+      <section>
+        <mat-card class="matmob">
+          <mat-card-title>Nikita Kejriwal</mat-card-title>
+          <mat-card-subtitle>HR Head</mat-card-subtitle>
+          <img class="personmob" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto:  nikitak649@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/nikita-kejriwal-52118a179"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+    </div>
+
+      <section>
+        <mat-card class="matmob">
+          <mat-card-title>Shivansh Arora</mat-card-title>
+          <mat-card-subtitle>Strategic Consultant</mat-card-subtitle>
+          <img class="personmob" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto: simplyshivansh10@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href=" https://www.linkedin.com/in/shivansharora/"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+
+      <section>
+        <mat-card class="matmob">
+          <mat-card-title>Tanya Dhingra</mat-card-title>
+          <mat-card-subtitle>Social Media Head</mat-card-subtitle>
+          <img class="personmob" src="/assets/Images/home/mission.jpg" /><br />
+          <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
+            <section>
+              <a href="mailto:  taniyadhingra97@gmail.com "
+                ><img class="circle" src="\assets\Images\home\icon\gmail.png"
+              /></a>
+            </section>
+            <section>
+              <a href="https://www.linkedin.com/in/tanya-dhingra-b92300161"
+                ><img
+                  class="circle"
+                  src="\assets\Images\home\icon\linkedin.png"
+              /></a>
+            </section>
+          </div>
+        </mat-card>
+      </section>
+
+    <br /><br />
+  </div>
+  <!-- <app-ourservices></app-ourservices> -->
 </div>
