--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,13 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
+.mobcontainer {
+  position: relative;
+  text-align: center;
+  font-weight: bolder;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 .center {
   position: absolute;
   top: 50%;
@@ -15,10 +21,40 @@
   color: black;
   line-height: 40px;
 }
+.mobcenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  line-height: 20px;
+}
 .homeimg {
   width: 50%;
   height: 650px;
   opacity: 0.3;
+}
+.mobimg {
+  width: 100%;
+  height: 300px;
+  opacity: 0.3;
+}
+.person {
+  width: 350px;
+  height: 350px;
+}
+.personmob{
+  width: 320px;
+  height: 350px;
+}
+.personmob{
+  width: 320px;
+  height: 350px;
+}
+.circle {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
 .bg1 {
   background-image: url("/assets/Images/home/bg1.jpg");
@@ -28,4 +64,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.matmob{
+  width: 320px;
 }
