--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,16 +1,18 @@
 <div fxHide.lt-md>
   <br />
-  <div fxLayout fxLayoutAlign="center">
+  <div fxLayout="column" fxLayoutAlign="center center">
+    <br>
+    <h1 class="heading">About US</h1> <br>
     <img
       src="assets/Images/about us.jpg"
-      style="width: 1000px; height: 600px;"
+      style="width: 800px; height: 400px;"
     />
   </div>
 
   <div fxLayout="column" fxLayoutGap="80px" fxLayoutAlign="center center">
     <br />
     <h1>Experience You Can Count On</h1>
-    <section style="padding-left: 150px; padding-right: 150px;">
+    <section style="padding-left: 200px; padding-right: 200px; font-size: 16px; ">
       Our service includes a comprehensive consultation to help identify gaps
       and opportunities, a comprehensive report that includes a project plan
       with timelines and milestones, a cost analysis, and a schedule. We also
@@ -49,6 +51,63 @@
       offer a suite of quality products that will help you get there quickly and
       smoothly. That’s how we ensure your success.
     </section>
+    <br>
   </div>
 </div>
 
+<div fxHide.gt-md>
+  <br />
+  <div fxLayout="column" fxLayoutAlign="center center" >
+    <br>
+    <h1 class="mobheading">About US</h1> <br>
+    <img
+      src="assets/Images/about us.jpg"
+      style="width: 320px; height: 170px;"
+    />
+  </div>
+
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+    <br />
+    <h1>Experience You Can Count On</h1>
+    <section style="padding-left: 20px; padding-right: 20px;font-size: 16px; text-align: justify; ">
+      Our service includes a comprehensive consultation to help identify gaps
+      and opportunities, a comprehensive report that includes a project plan
+      with timelines and milestones, a cost analysis, and a schedule. We also
+      offer a suite of quality products that will help you get there quickly and
+      smoothly. That’s how we ensure your success. <br /> <br>
+
+      <b>Mission statements – </b>We deliver what we promise, efficient and
+      promising prospected candidates to our clients. We want to give each of
+      you the time and guidance you deserve. To provide the best services with
+      effective results, changing lives everyday - RIGHT MAN AT RIGHT JOB.
+      <br />
+      <br />
+      Company policies – We ensure the highest professional standards and
+      protection of your interest. <br />
+      <ul>
+        <li>
+          A perfect business mix of business focus and technology which is
+          backed with a specialize team of the recruiter.
+        </li>
+        <li>
+          Interviewing and assessing prospective applicants and matching them
+          with vacancies at client companies.
+        </li>
+        <li>
+          We believe in right man at right job under dynamic leadership of HR
+          professionals.
+        </li>
+        <li>
+          We believe in the growth of our clients as well as our prospective
+          employees.
+        </li>
+      </ul> <br>
+      Our service includes a comprehensive consultation to help identify gaps
+      and opportunities, a comprehensive report that includes a project plan
+      with timelines and milestones, a cost analysis, and a schedule. We also
+      offer a suite of quality products that will help you get there quickly and
+      smoothly. That’s how we ensure your success.
+    </section>
+    <br>
+  </div>
+</div>
