--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,12 +48,12 @@
     >
       Clients we Work For:
     </div>
-    <div style="width: 50%; height: 70%;">
+    <div style="width: 40%; height: 70%;">
       <ng-image-slider
         [images]="imageObject"
         [infinite]="true"
         [autoSlide]="1"
-        [imageSize]="{ width: '100%', height: 700 }"
+        [imageSize]="{ width: '100%', height: 500 }"
         slideImage="1"
         #nav
       ></ng-image-slider>
@@ -190,9 +190,11 @@
     <br /><br />
   </div>
   <div class="bg2"></div>
+  <app-aboutus></app-aboutus>
+  <div class="bg3"></div>
  <app-ourservices></app-ourservices>
 </div>
-
+<!-- Mobile view -->
 <div fxHide.gt-md>
   <div class="mobcontainer">
     <img class="mobimg" src="\assets\Images\home\logo.png" />
@@ -378,5 +380,7 @@
     <br /><br />
   </div>
   <div class="bg2"></div>
-  <app-ourservices></app-ourservices>
+  <app-aboutus></app-aboutus>
+  <div class="bg3"></div>
+ <app-ourservices></app-ourservices>
 </div>
