--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -74,6 +74,15 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.bg3 {
+  background-image: url("/assets/Images/home/bg3.jpg");
+  min-height: 400px;
+  min-width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .matmob{
   width: 320px;
 }
