--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,5 +1,5 @@
 <div fxHide.lt-md>
-  <h1 class="h1class">Contact Us</h1>
+  <h1 class="h1class" >Contact Us</h1>
   <br />
   <br />
   <div fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center">
@@ -9,7 +9,7 @@
         today, and we can start you on a path to success.</p>
     <br>
     <br>
-    <a href=""><div fxLayout style="background-color: slategray; font-size: 22px; padding:5px;border-radius: 2%;" >
+    <a href="whatsapp://send?text=&phone=+9170143 82302"><div fxLayout style="background-color: slategray; font-size: 22px; padding:5px;border-radius: 2%;" >
 
      <section>
        <img src="assets/Images/whatsapp.png" style="width: 65x;height: 50px; ">
@@ -24,6 +24,40 @@
   <div fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center">
     <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">GROW-HOPES</h1>
       <p style="padding-right: 500px;padding-left: 500px;text-align: center;font-size: 18px;">D-88, Shanti nagar, Khatipura road, Civil lines,302006</p>
+    <br>
+
+    <a class="aref" href="mailto:contact@growhopes.in"> contact@growhopes.in</a>
+    <br>
+  </div>
+
+</div>
+
+<div fxHide.gt-md>
+  <h1 class="h1mob" >Contact Us</h1>
+  <br />
+  <br />
+  <div fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center">
+    <h1>Get Started Today</h1>
+      <p style="padding-right: 20px;padding-left: 20px;text-align: center;font-size: 16px;">Where does your business need more support? We offer a broad range of
+        services and packages that be customized to your needs. Send us a message
+        today, and we can start you on a path to success.</p>
+    <br>
+    <br>
+    <a href="whatsapp://send?text=&phone=+9170143 82302"><div fxLayout style="background-color: slategray; font-size: 22px; padding:5px;border-radius: 2%;" >
+
+     <section>
+       <img src="assets/Images/whatsapp.png" style="width: 65x;height: 50px; ">
+     </section>
+     <section style="padding-top: 15px;">
+      Connect on whatsapp
+     </section>
+    </div> </a>
+
+  </div>
+  <br> <br>
+  <div fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center">
+    <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">GROW-HOPES</h1>
+      <p style="padding-right: 20px;padding-left: 20px;text-align: center;font-size: 18px;">D-88, Shanti nagar, Khatipura road, Civil lines,302006</p>
     <br>
 
     <a class="aref" href="mailto:contact@growhopes.in"> contact@growhopes.in</a>
