--- a/src/app/contactus/contactus.component.scss
+++ b/src/app/contactus/contactus.component.scss
@@ -5,6 +5,13 @@
   padding-top: 35px;
   text-align: center;
 }
+.h1mob{
+  font-size: 30px;
+  font-family: cursive;
+  color: royalblue;
+  padding-top: 25px;
+  text-align: center;
+}
 a{
   text-decoration: none;
   color: white;
