--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar (scroll)="onWindowScroll($event)">
+<mat-toolbar >
   <div fxHide.gt-md>
     <button mat-icon-button (click)="onToggleSidenav()">
       <mat-icon>menu</mat-icon>
