--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -88,11 +88,11 @@
 }
 a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 a:hover,
 a:active {
-  color: lightgrey;
+  color: white;
 }
 .navbar {
   list-style: none;
@@ -103,7 +103,8 @@ a:active {
 mat-toolbar {
   z-index: 100;
   position: fixed;
-  background-color: rgb(22,22,22);
+  // background-color: rgb(22,22,22);
+  background-color: rgb(226, 224, 224);
 }
 
 .active {
